# MTGCardScraper

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
